# HarmonyosDemo

./: README.md
MyApp/: build-profile.json5  oh-package.json5
MyApp/AppScope/: app.json5
MyApp/AppScope/resources/base/element/: string.json
MyApp/MyCppLibrary/: build-profile.json5  oh-package.json5
MyApp/MyCppLibrary/src/main/: module.json5
MyApp/MyCppLibrary/src/main/cpp/: CMakeLists.txt  hello.cpp
MyApp/MyCppLibrary/src/main/cpp/types/libmycpplibrary/: oh-package.json5
MyApp/MyCppLibrary/src/main/ets/mycpplibraryability/: MyCppLibraryAbility.ts
MyApp/MyCppLibrary/src/main/ets/pages/: Index.ets
MyApp/MyCppLibrary/src/main/resources/base/element/: string.json
MyApp/MyCppLibrary/src/main/resources/zh_CN/element/: string.json
MyApp/MyCppLibrary/src/ohosTest/: module.json5
MyApp/MySharedLibrary/: oh-package.json5
MyApp/MySharedLibrary/src/main/: module.json5
MyApp/MySharedLibrary/src/main/ets/pages/: Index.ets
MyApp/MyStaticLibrary/: build-profile.json5  index.ets  oh-package.json5
MyApp/MyStaticLibrary/src/main/: module.json5
MyApp/MyStaticLibrary/src/main/ets/components/mainpage/: MainPage.ets
MyApp/MyStaticLibrary/src/main/ets/utils/: Calc.ets
MyApp/entry/: oh-package.json5
MyApp/entry/src/main/ets/pages/: Index.ets  Second.ets
